@@ -1,3 +1,9 @@
+mcabber (0.10.1-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (0.10.0)
 
  * Switch to the Loudmouth library (franky)
